# auth-service

./: .env  .env.example  .gitignore  Dockerfile  eslint.config.mjs  lint-output.txt  lint.json  lint_out.txt  lint_output.txt  lint_results.txt  logs.md  package.json  readme.md
.github/workflows/: ci.yml
auth-service/: README.md  docker-compose.dev.yml  package-lock.json  package.json
auth-service/admin-service/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
auth-service/admin-service/prisma/: schema.prisma
auth-service/admin-service/src/: index.ts
auth-service/analytics-service/migrations/: 001_initial.sql
auth-service/auth-service/: Dockerfile  package-lock.json
auth-service/execution-service/: Dockerfile  pyproject.toml
auth-service/execution-service/app/: config.py  main.py
auth-service/execution-service/migrations/: 001_initial.sql
auth-service/order-gateway/: .env.example  Dockerfile  package-lock.json  package.json
auth-service/order-gateway/prisma/: schema.prisma
auth-service/risk-service/: .env.example  Dockerfile  package-lock.json  package.json
auth-service/risk-service/prisma/: schema.prisma
auth-service/user-service/prisma/: schema.prisma
prisma/: schema.prisma
src/: index.ts
src/lib/: kafka.ts  logger.ts  mailer.ts  notifier.ts  redis.ts
src/middleware/: authenticate.ts  rateLimiter.ts  validate.ts
src/modules/admin/: admin.service.ts
src/routes/: admin.routes.ts  auth.routes.ts  demo.routes.ts  live.routes.ts
src/utils/: fetch.ts  hash.ts  jwt.ts  otp.ts  totp.ts
(+38 files in other folders)
