[project]
name = "execution-service"
version = "1.0.0"
description = "LiveFXHub V3 — Execution Service (order state machine, LP routing, worker orchestration)"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "asyncpg>=0.30.0",
  "aiokafka>=0.12.0",
  "aio-pika>=9.4.0",
  "redis[asyncio]>=5.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "httpx>=0.28.0",
  "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "mypy>=1.13.0",
  "ruff>=0.8.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "B", "C4", "PT"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
